feat: fixed class name

--- a/src/components/sbb-toast/sbb-toast.scss
+++ b/src/components/sbb-toast/sbb-toast.scss
@@ -69,7 +69,7 @@
   }
 }
 
-.toast.toast-icon-wrapper {
+.toast.toast--button-icon {
   padding-inline-end: calc(
     (2 * var(--sbb-spacing-fixed-2x)) + var(--sbb-size-button-m-min-height-small)
   );
