refactor(sbb-title): refactor sbb-title according to new specification

--- a/src/components/sbb-title/sbb-title.scss
+++ b/src/components/sbb-title/sbb-title.scss
@@ -3,11 +3,10 @@
 @include host-component-properties;
 
 :host {
-  // @todo define where to handle font color: see inherited.scss
+  // TODO: define where to handle font color: see inherited.scss
   --_title-text-color-normal: var(--title-text-color-normal, var(--sbb-color-charcoal-default));
 }
 
-// TODO re-factor to a more generic class later
 .title--hidden {
   @include screenReaderOnly;
 }
