--- a/src/global/mixins/mixins_card.scss
+++ b/src/global/mixins/mixins_card.scss
@@ -12,6 +12,7 @@
   // Todo: Design tokens need to be defined globally
   --card-hover-shift: 2px;
   --card-hover-animation: 0.03s all ease-out;
+  --card-outline: var(--sbb-color-smoke-default) solid #{px-to-rem-build(2)};
 
   // Needed to fully span on grids e.g. home/products
   height: 100%;
@@ -36,6 +37,8 @@
 
   &:focus {
     @include card--shadow;
+
+    outline: var(--card-outline);
   }
 
   // If the the device can hover over elements with ease
@@ -43,6 +46,10 @@
     &:hover {
       @include card--shadow;
     }
+  }
+
+  &:active {
+    outline: var(--card-outline);
   }
 
   @include ifForcedColors {
