docs: fix links in github templates

--- a/src/components/sbb-icon/sbb-icon.scss
+++ b/src/components/sbb-icon/sbb-icon.scss
@@ -22,8 +22,7 @@ svg {
       stroke: currentcolor;
     }
 
-    // stylelint-disable plugin/stylelint-bem-namics
-    // stylelint-disable selector-not-notation
+    // stylelint-disable plugin/stylelint-bem-namics, selector-not-notation
     // TODO: Maybe improve this solution in CDN Image
     & >,
     :where(:not([stroke]):not([fill])) {
@@ -31,7 +30,6 @@ svg {
         fill: currentcolor;
       }
     }
-    // stylelint-enable selector-not-notation
-    // stylelint-enable plugin/stylelint-bem-namics
+    // stylelint-enable plugin/stylelint-bem-namics, selector-not-notation
   }
 }
