--- a/src/components/sbb-timetable-row/sbb-timetable-row.scss
+++ b/src/components/sbb-timetable-row/sbb-timetable-row.scss
@@ -1,88 +1,54 @@
-// Default component properties, defined for :host. Properties which can not
-// travel the shadow boundary are defined through this mixin
-@include host-component-properties;
-
-:host {
-  display: block;
-
-  --row-min-height: 108;
-  --third-row-min-height: #{px-to-rem-build(27)};
-  --flex-basis-pillar-columns: 50; // left and right of pearl chain
-  --flex-basis-pillar-columns-walking-icon: 85; // if an icon is present, we have to increase the basis
-
-  @include mq($from: medium) {
-    --row-min-height: 114;
-    --flex-basis-pillar-columns: 55;
-  }
-}
-
-:host(sbb-timetable-row) {
-  margin-block-end: var(--sbb-spacing-fixed-1x);
-}
-
 .timetable__row {
-  @include card--m;
-
   position: relative;
+}
+
+.timetable__row-header {
   display: flex;
-  flex: 0 0 100%;
-  flex-flow: row wrap;
-  align-items: flex-start;
+  gap: 1rem;
+}
+
+::slotted([slot='direction']) {
+  @include ellipsis;
+
+  margin: 0;
+}
+
+.timetable__row-body,
+.timetable__row-footer {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  column-gap: var(--sbb-spacing-fixed-2x);
-  padding-block-start: var(--card-padding-top);
-  padding-inline-end: var(--card-padding-right);
-  padding-block-end: var(--card-padding-bottom);
-  padding-inline-start: var(--card-padding-left);
 }
 
-.timetable__row > sbb-timetable-row-header,
-.timetable__row > sbb-timetable-transportation-details,
-.timetable__row > sbb-timetable-row-button,
-.timetable__row > sbb-timetable-platform,
-.timetable__row > sbb-timetable-occupancy,
-.timetable__row > sbb-timetable-travel-hints,
-.timetable__row > sbb-timetable-park-and-rail,
-.timetable__row > sbb-timetable-duration,
-.timetable__row > sbb-timetable-cus-him {
-  display: flex;
-  flex: 0 1 auto;
-  position: relative;
-  z-index: 1;
-  pointer-events: none;
+::slotted([slot='pearlChain']) {
+  flex: 1 1 auto;
+  align-self: center;
 }
 
-.timetable__row svg {
-  float: inline-start;
+::slotted([slot='pearlChain']),
+::slotted([slot='walkTimeBefore']),
+::slotted([slot='leftTime']),
+::slotted([slot='rightTime']),
+::slotted([slot='walkTimeAfter']) {
+  align-self: center;
 }
 
-.timetable__row > sbb-timetable-row-header {
-  @include screenReaderOnly;
+::slotted([slot='walkTimeBefore']),
+::slotted([slot='walkTimeAfter']),
+.timetable__row-occupancy li {
+  display: inline-flex;
 }
 
-.timetable__row > sbb-timetable-row-button {
-  position: absolute;
-  inset: 0;
-  z-index: 0;
-  pointer-events: all;
+::slotted([slot='leftTime']),
+::slotted([slot='rightTime']) {
+  @include text-m--bold;
 }
 
-.timetable__row > sbb-timetable-transportation-details {
-  display: flex;
-  flex: 0 0 100%;
-  max-width: 100%;
-}
-
-.timetable__row > sbb-timetable-platform,
-.timetable__row > sbb-timetable-occupancy,
-.timetable__row > sbb-timetable-travel-hints,
-.timetable__row > sbb-timetable-park-and-rail,
-.timetable__row > sbb-timetable-duration,
-.timetable__row > sbb-timetable-cus-him {
-  align-items: center;
-  min-height: var(--third-row-min-height);
-
-  &.visually-empty {
-    position: absolute;
-  }
+::slotted([slot='travelHints']),
+.timetable__row-occupancy {
+  display: inline-flex;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  text-decoration: none;
 }
