feat: synch changes with sbb-toggle-check

--- a/src/components/sbb-checkbox/sbb-checkbox.scss
+++ b/src/components/sbb-checkbox/sbb-checkbox.scss
@@ -57,7 +57,7 @@ input[type='checkbox'] {
   color: var(--checkbox-selection-color);
 }
 
-// WIP: Icon is bigger then --checkbox-width
+// todo: icon is bigger then --checkbox-width
 .checkbox__icon {
   position: absolute;
   top: -20%;
