--- a/src/components/sbb-card-badge/sbb-card-badge.scss
+++ b/src/components/sbb-card-badge/sbb-card-badge.scss
@@ -16,18 +16,7 @@
 }
 
 .card-badge {
-  display: flex;
-  align-items: center;
-  position: absolute;
-  inset-block-start: 0;
-  inset-inline-end: 0;
-  padding-inline-start: var(--sbb-spacing-fixed-1x);
-  padding-inline-end: var(--sbb-spacing-fixed-8x);
-  border-end-start-radius: var(--sbb-border-radius-4x);
-
-  // Left to right expression
-  right: calc(var(--sbb-spacing-fixed-3x) * -1);
-  transform: skew(16deg, 0deg);
+  @include card-badge;
 
   > * {
     transform: skew(-16deg, 0deg);
