--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -2,6 +2,7 @@
 @import 'mixins/mixins_spacing.scss';
 @import 'mixins/mixins_a11y.scss';
 @import 'mixins/mixins_card.scss';
+@import 'mixins/mixins_card_badge.scss';
 @import 'mixins/mixins_buttons.scss';
 @import 'mixins/mixins_panel.scss';
 @import 'mixins/mixins_typo.scss';
