refactor(styles): simplify global font style application

--- a/src/global/core/shared/inherited.scss
+++ b/src/global/core/shared/inherited.scss
@@ -8,13 +8,8 @@
 // in global/core/components/utilities.scss which each component needs to @extend
 @import './../../mixins.scss';
 
-html,
-:host {
+html {
   @include text;
-}
 
-body,
-:host {
-  font-family: var(--typo-default-font-family);
   color: var(--sbb-font-default-color);
 }
