fix: update sbb-divider.scss

--- a/src/components/sbb-divider/sbb-divider.scss
+++ b/src/components/sbb-divider/sbb-divider.scss
@@ -12,7 +12,7 @@
 }
 
 .sbb-divider--horizontal {
-  border-top: var(--border-width) solid var(--_divider-color);
+  border-top: var(--border-width) solid var(--divider-color);
 }
 
 .sbb-divider--vertical {
