fix: add user-select: none to prevent the toggle from freezing on double-click

--- a/src/components/sbb-toggle-check/sbb-toggle-check.scss
+++ b/src/components/sbb-toggle-check/sbb-toggle-check.scss
@@ -31,6 +31,7 @@
   display: inline-flex;
   align-items: center;
   color: var(--toggle-check-color);
+  user-select: none;
   @include text-s--regular;
 }
 
