fix(sbb-toggle-check): prevent the toggle from freezing on double-click (#1315)

--- a/src/components/sbb-toggle-check/sbb-toggle-check.scss
+++ b/src/components/sbb-toggle-check/sbb-toggle-check.scss
@@ -31,6 +31,8 @@
   display: inline-flex;
   align-items: center;
   color: var(--toggle-check-color);
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
   @include text-s--regular;
 }
 
