--- a/src/components/sbb-divider/sbb-divider.scss
+++ b/src/components/sbb-divider/sbb-divider.scss
@@ -4,7 +4,7 @@
 
 :host {
   --divider-color: var(--sbb-color-cloud-default);
-  --border-width: var(--sbb-border-width-1x);
+  --divider-border-width: var(--sbb-border-width-1x);
 }
 
 :host(.sbb-divider--negative) {
