fix(sbb-toggle-check): fix various issues (#1317)

--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -44,3 +44,11 @@
   top: 50%;
   transform: translateY(-50%);
 }
+
+/** This mixin can be used to avoid spacing problems by inserting an invisible space as pseudo element. */
+@mixin zeroWidthSpace() {
+  &::before {
+    content: '\200B';
+    user-select: none;
+  }
+}
