--- a/src/components/sbb-form-error/sbb-form-error.scss
+++ b/src/components/sbb-form-error/sbb-form-error.scss
@@ -27,10 +27,12 @@
   left: calc(var(--sbb-icon-svg-width) + var(--sbb-spacing-fixed-1x));
 }
 
-.sbb-icon,
-::slotted(span) {
+.sbb-icon{
   @include absoluteCenterY;
   
-  height: var(--sbb-icon-svg-width);
+  color: var(--sbb-color-red125-default);
+}
+
+::slotted(span) {  
   color: var(--sbb-color-red125-default);
 }
