test: does chromatic see padding?

--- a/src/components/sbb-toggle-check/sbb-toggle-check.scss
+++ b/src/components/sbb-toggle-check/sbb-toggle-check.scss
@@ -58,6 +58,7 @@
   color: var(--toggle-check-color);
   user-select: none;
   -webkit-tap-highlight-color: transparent;
+  padding-bottom: 20px;
 }
 
 input[type='checkbox'] {
