--- a/src/components/sbb-teaser/sbb-teaser.scss
+++ b/src/components/sbb-teaser/sbb-teaser.scss
@@ -14,6 +14,8 @@
 }
 
 .teaser {
+  @include zeroWidthSpace;
+
   text-decoration: none;
   display: flex;
   flex-flow: var(--teaser-flex-direction) nowrap;
@@ -29,6 +31,11 @@
   --teaser-flex-direction: column;
   --teaser-align-items: baseline;
   --teaser-gap: var(--sbb-spacing-fixed-3x);
+
+  &::before {
+    // Deactivate zero width fix for stacked variant.
+    content: none;
+  }
 }
 
 ::slotted([slot='image']) {
