--- a/src/components/sbb-form-error/sbb-form-error.scss
+++ b/src/components/sbb-form-error/sbb-form-error.scss
@@ -4,35 +4,22 @@
 @include host-component-properties;
 
 :host {
-  position: relative;
-  margin-block-start: var(--sbb-spacing-fixed-1x);
-
-  // error height = text line-height
-  min-height: calc(var(--sbb-typo-line-height-body-text) * var(--sbb-font-size-text-xs));
-
-  --sbb-icon-svg-width: var(--sbb-size-icon-form-error);
-}
-
-// Error
-.input-label-error {
-  @include text-xs--regular;
+  --form-error-height: calc(var(--sbb-typo-line-height-body-text) * var(--sbb-font-size-text-xs));
 
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   color: var(--sbb-color-red125-default);
-  position: absolute;
-  top: 0;
+  @include text-xs--regular;
 
-  // reserving space for icon
-  left: calc(var(--sbb-icon-svg-width) + var(--sbb-spacing-fixed-1x));
+  // error height = text line-height
+  min-height: var(--form-error-height);
+
+  --sbb-icon-svg-width: var(--sbb-size-icon-form-error);
+  --sbb-icon-svg-height: var(--sbb-size-icon-form-error);
 }
 
-.sbb-icon {
-  @include absoluteCenterY;
-
-  color: var(--sbb-color-red125-default);
-}
-
-::slotted(span) {
-  color: var(--sbb-color-red125-default);
+.form-error__icon {
+  height: var(--sbb-size-icon-form-error);
+  padding-inline-end: var(--sbb-spacing-fixed-1x);
+  padding-block-start: calc((var(--form-error-height) - var(--sbb-size-icon-form-error)) / 2);
 }
