--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -4,49 +4,120 @@
 @include host-component-properties;
 
 :host {
-  display: block;
+  display: inline-block;
+  width: #{px-to-rem-build(300)};
 
-  --text-color-label: var(--sbb-color-metal-default);
-  --text-color-input-default: var(--sbb-color-charcoal-default);
-  --text-color-input-error: var(--sbb-color-red125-default);
-  --border-color-default: var(--sbb-color-smoke-default);
-  --border-color-disabled: var(--sbb-color-graphite-default);
-  --border-color-error: var(--sbb-color-red125-default);
-  --border-color-focus: var(--sbb-color-charcoal-default);
-  --background-color-default: var(--sbb-color-white-default);
-  --background-color-disabled: var(--sbb-color-milk-default);
-  --text-color-readonly: var(--sbb-color-granite-default);
-  --text-color-disabled: var(--border-color-disabled);
-  --input-with-icon-padding-inline: calc(
-    var(--sbb-spacing-fixed-3x) + var(--sbb-size-icon-ui-small) + var(--sbb-spacing-fixed-2x)
-  );
-  --icon-size: var(--sbb-size-icon-ui-small);
+  --form-field-background-color: var(--sbb-color-white-default);
+  --form-field-border-color: var(--sbb-color-smoke-default);
+  --form-field-border-radius: var(--sbb-border-radius-4x);
+  --form-field-height: var(--sbb-size-form-element-m-min-height-small);
+  --form-field-label-color: var(--sbb-color-metal-default);
+  --form-field-padding-inline: var(--sbb-spacing-fixed-3x);
+  --form-field-text-color: var(--sbb-color-charcoal-default);
 
-  // waiting for token update
-  // --input-height-m: var(--sbb-size-form-element-m-min-height-small)
-  --input-height-m: var(--sbb-size-form-element-m-min-height-small);
-  --input-height-l: var(--sbb-size-form-element-l-min-height-small);
+  // Lock sbb-icon size
+  --sbb-icon-svg-width: var(--sbb-size-icon-ui-small);
+  --sbb-icon-svg-height: var(--sbb-size-icon-ui-small);
 
   @include mq($from: medium) {
-    --input-height-m: var(--sbb-size-form-element-m-min-height-medium);
-    --input-height-l: var(--sbb-size-form-element-l-min-height-medium);
+    --form-field-height: var(--sbb-size-form-element-m-min-height-medium);
   }
 }
 
-.input-wrapper {
-  position: relative;
+:host(:focus-within) {
+  --form-field-border-color: var(--sbb-color-charcoal-default);
 }
 
-::slotted(.input-wrapper--error) {
-  color: var(--text-color-input-error);
+:host(.form-field--size-l) {
+  --form-field-border-radius: var(--sbb-border-radius-8x);
+  --form-field-height: var(--sbb-size-form-element-l-min-height-medium);
+  --form-field-padding-inline: var(--sbb-spacing-responsive-xxxs);
+
+  @include mq($from: medium) {
+    --form-field-height: var(--sbb-size-form-element-l-min-height-medium);
+  }
 }
 
-::slotted(.input-wrapper__inner) {
+:host(.sbb-invalid) {
+  --form-field-border-color: var(--sbb-color-red125-default);
+  --form-field-text-color: var(--sbb-color-red125-default);
+}
+
+:host(.form-field--readonly),
+:host(.form-field--disabled) {
+  --form-field-background-color: var(--sbb-color-milk-default);
+  --form-field-border-color: var(--sbb-color-graphite-default);
+}
+
+:host(.form-field--readonly) {
+  --form-field-label-color: var(--sbb-color-granite-default);
+}
+
+:host(.form-field--disabled) {
+  --form-field-label-color: var(--sbb-color-graphite-default);
+  --form-field-text-color: var(--sbb-color-graphite-default);
+}
+
+:host(.form-field--borderless) {
+  --form-field-border-color: transparent;
+}
+
+:host(.form-field--error-space-reserve) {
+  // TODO: Fix hack
+  --form-field-error-min-height: calc(
+    var(--sbb-typo-line-height-body-text) * var(--sbb-font-size-text-xs) * 1.25
+  );
+  --form-field-error-padding-block-start: var(--sbb-border-width-1x);
+}
+
+.form-field__wrapper {
   position: relative;
+  display: flex;
+  align-items: center;
+  padding-inline: var(--form-field-padding-inline);
+  border: var(--sbb-border-width-1x) solid var(--form-field-border-color);
+  border-radius: var(--form-field-border-radius);
+  height: var(--form-field-height);
+  background-color: var(--form-field-background-color);
+
+  // Avoids unwanted space displayed if no label text is set.
+  @include zeroWidthSpace;
+}
+
+.form-field__prefix,
+.form-field__suffix {
+  flex: 0 0 auto;
+  height: var(--sbb-size-icon-ui-small);
+}
+
+.form-field__prefix:not(.form-field__prefix--empty) {
+  padding-inline-end: var(--sbb-spacing-fixed-2x);
+}
+
+.form-field__suffix:not(.form-field__suffix--empty) {
+  padding-inline-start: var(--sbb-spacing-fixed-2x);
+}
+
+.form-field__input-container {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+}
+
+// Label
+.form-field__label {
+  @include text-xs--regular;
+  @include ellipsis;
+
+  display: flex;
+  max-width: 100%;
+  color: var(--form-field-label-color);
+  user-select: none;
+  pointer-events: none;
 }
 
 // Input
-::slotted(.input) {
+.form-field__input ::slotted(:is(input, select, .sbb-field-input)) {
   @include text-m--regular;
   @include placeholder;
   @include ellipsis;
@@ -54,143 +125,17 @@
   -webkit-appearance: none;
   width: 100%;
   box-sizing: border-box;
-  padding-block-start: var(--sbb-spacing-fixed-5x);
-  padding-inline-start: var(--sbb-spacing-fixed-3x);
-  padding-inline-end: var(--sbb-spacing-fixed-3x);
-  background-color: var(--background-color-default);
-  border: var(--sbb-border-width-1x) solid var(--border-color-default);
-}
-
-::slotted(.input.form-field--size-m) {
-  height: var(--input-height-m);
-  border-radius: var(--sbb-border-radius-4x);
-}
-
-::slotted(.input.form-field--size-l) {
-  height: var(--input-height-l);
-  border-radius: var(--sbb-border-radius-8x);
-}
-
-::slotted(.input.form-field--borderless),
-::slotted(.input.form-field--borderless:focus),
-::slotted(.sbb-invalid.form-field--borderless),
-::slotted(.ng-touched.ng-invalid.form-field--borderless) {
-  border-color: var(--background-color-default);
-}
-
-::slotted(.input:focus) {
-  border-color: var(--border-color-focus);
+  border: none;
   outline: none;
+  padding: 0;
+  background-color: var(--form-field-background-color);
 }
 
-::slotted(.input[disabled]) {
-  color: var(--text-color-disabled);
-  border-color: var(--text-color-disabled);
-  background-color: var(--background-color-disabled);
-}
+.form-field__error {
+  &:not(.form-field__suffix--empty) {
+    --form-field-error-padding-block-start: var(--sbb-border-width-1x);
+  }
 
-::slotted(.input[disabled] + .input-label) {
-  color: var(--text-color-disabled);
-}
-
-::slotted(.input.form-field--borderless[disabled]) {
-  border-color: var(--background-color-disabled);
-}
-
-::slotted(.input[readonly]) {
-  color: var(--text-color-readonly);
-  border-color: var(--text-color-disabled);
-  background-color: var(--background-color-disabled);
-}
-
-::slotted(.input.form-field--borderless[readonly]) {
-  border-color: var(--background-color-disabled);
-}
-
-// Input Icon
-::slotted(.input__icon-prefix),
-::slotted(.input__icon-suffix) {
-  @include absoluteCenterY;
-
-  height: var(--icon-size);
-  overflow: hidden;
-  fill: currentcolor;
-}
-
-::slotted(.input__icon-prefix) {
-  inset-inline-start: var(--sbb-spacing-fixed-3x);
-}
-
-::slotted(.input__icon-suffix) {
-  inset-inline-end: var(--sbb-spacing-fixed-3x);
-}
-
-// Input Variant
-.form--prefix ::slotted(.input) {
-  padding-inline-start: var(--input-with-icon-padding-inline);
-}
-
-.form--suffix ::slotted(.input) {
-  padding-inline-end: var(--input-with-icon-padding-inline);
-}
-
-::slotted(.sbb-invalid),
-::slotted(.ng-touched.ng-invalid) {
-  color: inherit;
-  border-color: var(--border-color-error);
-}
-
-// Error message
-:host([error-space='reserve']) {
-  margin-block-end: calc(
-    var(--sbb-spacing-fixed-1x) +
-      (var(--sbb-typo-line-height-body-text) * var(--sbb-font-size-text-xs))
-  );
-}
-
-::slotted(.input-label-error[error-space='reserve']) {
-  position: absolute;
-  width: 100%;
-  bottom: calc(
-    -1 * (var(--sbb-spacing-fixed-1x) +
-          (var(--sbb-typo-line-height-body-text) * var(--sbb-font-size-text-xs)))
-  );
-}
-
-// Label
-.input-label {
-  @include text-xs--regular;
-
-  position: absolute;
-  inset-block-start: var(--sbb-spacing-fixed-1x);
-  inset-block-end: var(--sbb-spacing-fixed-1x);
-  inset-inline-start: 0;
-  display: flex;
-  max-width: 100%;
-  padding-inline-start: var(--sbb-spacing-fixed-3x);
-  padding-inline-end: var(--sbb-spacing-fixed-3x);
-  color: var(--text-color-label);
-  user-select: none;
-  pointer-events: none;
-}
-
-.input-label--text {
-  @include ellipsis;
-}
-
-.input-label--optional {
-  flex: 0 0 auto;
-}
-
-// Label Variants
-.form-field--size-l .input-label {
-  padding-block-start: var(--sbb-spacing-fixed-1x);
-}
-
-.form--disabled .input-label {
-  color: var(--text-color-disabled);
-}
-
-.form--prefix .input-label {
-  padding-inline-start: var(--input-with-icon-padding-inline);
+  min-height: var(--form-field-error-min-height);
+  margin-block-start: var(--form-field-error-padding-block-start);
 }
